--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.2.0.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=\ --enable-preview --enable-preview --enable-preview --enable-preview
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -83,3 +83,4 @@ war.ear.name=${war.name}
 war.name=MegeCab.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
+run.jvmargs=--enable-preview
